Fix flex-wrap not working when there are code blocks or usage of `` in markdown

--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -13,6 +13,7 @@
 
 .postPageContainer {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
